--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,13 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-
-
 
     compileOnly('org.projectlombok:lombok')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.0'
 }
